[blink_gc_plugin] Complain about stack-allocated classes with GC bases, but not arbitrary non-stack-allocated bases.

BUG=644725

Review-Url: https://codereview.chromium.org/2323463002
Cr-Commit-Position: refs/heads/master@{#417845}

Former-commit-id: f06159b98aa70d663afdc22ea5e8c0ad0ca06bf2